--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tahmid Ecommerce</title>
-    <link rel="stylesheet" href="/1-bootstrap-file/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <style>
 
     </style>
@@ -258,7 +258,7 @@
         </div>
     </section>
     <!-- scripting my js file -->
-    <script src="/1-bootstrap-file/bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 </body>
 
 </html>
